hphp/test/vm/traits2.php.expectf
HipHop Fatal error: Interfaces cannot use traits in %s on line 7
